--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -14,11 +14,17 @@
   flex-direction:column;
   gap: 20px;
   align-items:center;
+  height: 0;
+  transition:300ms;
+}
+
+.sidebar_list_active{
+  height:300px;
 }
 
 .sidebar_list_item{
   border-radius: 50%;
-  height: 26px;
-  width: 26px;
+  height: 24px;
+  width: 24px;
   list-style: none;
 }
