--- a/src/components/Notes/Note.css
+++ b/src/components/Notes/Note.css
@@ -17,3 +17,13 @@
   outline: none;
   border: none;
 }
+
+.note_footer{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.note_footer img{
+  width:25px;
+}
