--- a/src/components/NoteContainer/NoteContainer.css
+++ b/src/components/NoteContainer/NoteContainer.css
@@ -1,5 +1,6 @@
  .note-container{
    height: 100%;
+   /* position:relative; */
  }
 
 .note-container h2{
@@ -12,4 +13,14 @@
    flex-wrap: wrap;
    gap: 20px;
    overflow: scroll;
+ }
+
+ .note-container_noNotes-text{
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  font-size: 40px;
+  border: 2px solid black;
+  padding: 20px;
+  background-color: rgb(205, 53, 78);
  }
